// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal Snapshot Tests > displays disabled primary and secondary buttons 1`] = `
<body
>

  <div
  >
  </div
  >

    <div
      data-scope="dialog"
      data-part="backdrop"
      dir="ltr"
      id="dialog::r3::backdrop"
      data-state="open"
      class="_modal-backdrop_HASH_22"
    >
    </div
    >

      <div
        data-scope="dialog"
        data-part="positioner"
        dir="ltr"
        id="dialog::r3::positioner"
        class="_modal-positioner_HASH_29"
      >

        <div
          data-scope="dialog"
          data-part="content"
          dir="ltr"
          role="dialog"
          id="dialog::r3::content"
          tabindex="-1"
          data-state="open"
          aria-modal="true"
          aria-labelledby=""
          aria-describedby=""
          class="_modal-content_HASH_35"
          data-ods="modal-content"
        >

          <div
            class="_modal-header--information_HASH_17 _modal-header_HASH_2"
          >

            <button
              class="_button--ghost_HASH_151 _button--neutral_HASH_83 _button--xs_HASH_25 _button_HASH_2 _modal-header__close_HASH_26"
              data-ods="button"
              aria-label="Close"
              data-scope="dialog"
              data-part="close-trigger"
              dir="ltr"
              id="dialog::r3::close"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >
              </div
              >

                <div
                  class="_modal-body_HASH_2 text-left"
                  data-ods="modal-body"
                >

                  <div
                    class="flex items-center mb-4"
                  >

                    <h4
                      class="_text--heading-4_HASH_31 block flex-1 mr-3"
                      data-ods="text"
                    >Example Heading
                    </h4
                    >
                    </div
                    >

                      <div
                        class="flex flex-col text-left"
                      >

                        <div
                        >

                          <p
                          >Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
                          </p
                          >

                            <label
                              for="test-input"
                            >Test Input
                            </label
                            >

                              <input
                                type="text"
                                id="test-input"
                                data-testid="test-input"
                              >
                            </div
                            >
                            </div
                            >

                              <div
                                class="flex flex-wrap gap-4 justify-end"
                              >

                                <button
                                  class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 mt-4"
                                  data-ods="button"
                                  disabled=""
                                  data-testid="secondary-button"
                                  type="button"
                                >Cancel
                                </button
                                >

                                  <button
                                    class="_button--default_HASH_49 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 mt-4"
                                    data-ods="button"
                                    disabled=""
                                    data-testid="primary-button"
                                    type="button"
                                  >Confirm
                                  </button
                                  >
                                  </div
                                  >
                                  </div
                                  >
                                  </div
                                  >
                                  </div
                                  >
                                  </body
                                  >
`;

exports[`Modal Snapshot Tests > displays loading Modal 1`] = `
<body
>

  <div
  >
  </div
  >

    <div
      data-scope="dialog"
      data-part="backdrop"
      dir="ltr"
      id="dialog::r2::backdrop"
      data-state="open"
      class="_modal-backdrop_HASH_22"
    >
    </div
    >

      <div
        data-scope="dialog"
        data-part="positioner"
        dir="ltr"
        id="dialog::r2::positioner"
        class="_modal-positioner_HASH_29"
      >

        <div
          data-scope="dialog"
          data-part="content"
          dir="ltr"
          role="dialog"
          id="dialog::r2::content"
          tabindex="-1"
          data-state="open"
          aria-modal="true"
          aria-labelledby=""
          aria-describedby=""
          class="_modal-content_HASH_35"
          data-ods="modal-content"
        >

          <div
            class="_modal-header--information_HASH_17 _modal-header_HASH_2"
          >

            <button
              class="_button--ghost_HASH_151 _button--neutral_HASH_83 _button--xs_HASH_25 _button_HASH_2 _modal-header__close_HASH_26"
              data-ods="button"
              aria-label="Close"
              data-scope="dialog"
              data-part="close-trigger"
              dir="ltr"
              id="dialog::r2::close"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >
              </div
              >

                <div
                  class="_modal-body_HASH_2 text-left"
                  data-ods="modal-body"
                >

                  <div
                    class="flex items-center mb-4"
                  >

                    <h4
                      class="_text--heading-4_HASH_31 block flex-1 mr-3"
                      data-ods="text"
                    >Example Heading
                    </h4
                    >
                    </div
                    >

                      <div
                        data-testid="spinner"
                        class="flex justify-center my-5"
                      >

                        <span
                          class="_spinner--md_HASH_20 _spinner--primary_HASH_29 _spinner_HASH_10"
                          data-ods="spinner"
                          role="progressbar"
                        >

                          <svg
                            aria-hidden="true"
                            class="_spinner__svg_HASH_32"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >

                            <rect
                              fill="none"
                              height="24"
                              width="24"
                            >
                            </rect
                            >

                              <g
                                transform="translate(-237.694 -93.932)"
                              >

                                <path
                                  d="M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z"
                                  transform="translate(5486 4225)"
                                >
                                </path
                                >

                                  <circle
                                    cx="1"
                                    cy="1"
                                    r="1"
                                    transform="translate(248.694 114.932)"
                                  >
                                  </circle
                                  >

                                    <circle
                                      cx="1"
                                      cy="1"
                                      r="1"
                                      transform="translate(238.694 104.932)"
                                    >
                                    </circle
                                    >
                                    </g
                                    >
                                    </svg
                                    >
                                    </span
                                    >
                                    </div
                                    >
                                    </div
                                    >
                                    </div
                                    >
                                    </div
                                    >
                                    </body
                                    >
`;

exports[`Modal Snapshot Tests > displays loading primary and secondary buttons 1`] = `
<body
>

  <div
  >
  </div
  >

    <div
      data-scope="dialog"
      data-part="backdrop"
      dir="ltr"
      id="dialog::r4::backdrop"
      data-state="open"
      class="_modal-backdrop_HASH_22"
    >
    </div
    >

      <div
        data-scope="dialog"
        data-part="positioner"
        dir="ltr"
        id="dialog::r4::positioner"
        class="_modal-positioner_HASH_29"
      >

        <div
          data-scope="dialog"
          data-part="content"
          dir="ltr"
          role="dialog"
          id="dialog::r4::content"
          tabindex="-1"
          data-state="open"
          aria-modal="true"
          aria-labelledby=""
          aria-describedby=""
          class="_modal-content_HASH_35"
          data-ods="modal-content"
        >

          <div
            class="_modal-header--information_HASH_17 _modal-header_HASH_2"
          >

            <button
              class="_button--ghost_HASH_151 _button--neutral_HASH_83 _button--xs_HASH_25 _button_HASH_2 _modal-header__close_HASH_26"
              data-ods="button"
              aria-label="Close"
              data-scope="dialog"
              data-part="close-trigger"
              dir="ltr"
              id="dialog::r4::close"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >
              </div
              >

                <div
                  class="_modal-body_HASH_2 text-left"
                  data-ods="modal-body"
                >

                  <div
                    class="flex items-center mb-4"
                  >

                    <h4
                      class="_text--heading-4_HASH_31 block flex-1 mr-3"
                      data-ods="text"
                    >Example Heading
                    </h4
                    >
                    </div
                    >

                      <div
                        class="flex flex-col text-left"
                      >

                        <div
                        >

                          <p
                          >Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
                          </p
                          >

                            <label
                              for="test-input"
                            >Test Input
                            </label
                            >

                              <input
                                type="text"
                                id="test-input"
                                data-testid="test-input"
                              >
                            </div
                            >
                            </div
                            >

                              <div
                                class="flex flex-wrap gap-4 justify-end"
                              >

                                <button
                                  class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 mt-4"
                                  data-ods="button"
                                  data-testid="secondary-button"
                                  type="button"
                                >

                                  <span
                                    class="_button__spinner_HASH_373"
                                  >

                                    <span
                                      class="_spinner--neutral_HASH_26 _spinner--sm_HASH_17 _spinner_HASH_10"
                                      data-ods="spinner"
                                      role="none"
                                    >

                                      <svg
                                        aria-hidden="true"
                                        class="_spinner__svg_HASH_32"
                                        viewBox="0 0 24 24"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >

                                        <rect
                                          fill="none"
                                          height="24"
                                          width="24"
                                        >
                                        </rect
                                        >

                                          <g
                                            transform="translate(-237.694 -93.932)"
                                          >

                                            <path
                                              d="M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z"
                                              transform="translate(5486 4225)"
                                            >
                                            </path
                                            >

                                              <circle
                                                cx="1"
                                                cy="1"
                                                r="1"
                                                transform="translate(248.694 114.932)"
                                              >
                                              </circle
                                              >

                                                <circle
                                                  cx="1"
                                                  cy="1"
                                                  r="1"
                                                  transform="translate(238.694 104.932)"
                                                >
                                                </circle
                                                >
                                                </g
                                                >
                                                </svg
                                                >
                                                </span
                                                >
                                                </span
                                                >Cancel
                                                </button
                                                >

                                                  <button
                                                    class="_button--default_HASH_49 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 mt-4"
                                                    data-ods="button"
                                                    data-testid="primary-button"
                                                    type="button"
                                                  >

                                                    <span
                                                      class="_button__spinner_HASH_373"
                                                    >

                                                      <span
                                                        class="_spinner--neutral_HASH_26 _spinner--sm_HASH_17 _spinner_HASH_10"
                                                        data-ods="spinner"
                                                        role="none"
                                                      >

                                                        <svg
                                                          aria-hidden="true"
                                                          class="_spinner__svg_HASH_32"
                                                          viewBox="0 0 24 24"
                                                          xmlns="http://www.w3.org/2000/svg"
                                                        >

                                                          <rect
                                                            fill="none"
                                                            height="24"
                                                            width="24"
                                                          >
                                                          </rect
                                                          >

                                                            <g
                                                              transform="translate(-237.694 -93.932)"
                                                            >

                                                              <path
                                                                d="M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z"
                                                                transform="translate(5486 4225)"
                                                              >
                                                              </path
                                                              >

                                                                <circle
                                                                  cx="1"
                                                                  cy="1"
                                                                  r="1"
                                                                  transform="translate(248.694 114.932)"
                                                                >
                                                                </circle
                                                                >

                                                                  <circle
                                                                    cx="1"
                                                                    cy="1"
                                                                    r="1"
                                                                    transform="translate(238.694 104.932)"
                                                                  >
                                                                  </circle
                                                                  >
                                                                  </g
                                                                  >
                                                                  </svg
                                                                  >
                                                                  </span
                                                                  >
                                                                  </span
                                                                  >Confirm
                                                                  </button
                                                                  >
                                                                  </div
                                                                  >
                                                                  </div
                                                                  >
                                                                  </div
                                                                  >
                                                                  </div
                                                                  >
                                                                  </body
                                                                  >
`;

exports[`Modal Snapshot Tests > displays the basic modal 1`] = `
<body
>

  <div
  >
  </div
  >

    <div
      data-scope="dialog"
      data-part="backdrop"
      dir="ltr"
      id="dialog::r0::backdrop"
      data-state="open"
      class="_modal-backdrop_HASH_22"
    >
    </div
    >

      <div
        data-scope="dialog"
        data-part="positioner"
        dir="ltr"
        id="dialog::r0::positioner"
        class="_modal-positioner_HASH_29"
      >

        <div
          data-scope="dialog"
          data-part="content"
          dir="ltr"
          role="dialog"
          id="dialog::r0::content"
          tabindex="-1"
          data-state="open"
          aria-modal="true"
          aria-labelledby=""
          aria-describedby=""
          class="_modal-content_HASH_35"
          data-ods="modal-content"
        >

          <div
            class="_modal-header--information_HASH_17 _modal-header_HASH_2"
          >

            <button
              class="_button--ghost_HASH_151 _button--neutral_HASH_83 _button--xs_HASH_25 _button_HASH_2 _modal-header__close_HASH_26"
              data-ods="button"
              aria-label="Close"
              data-scope="dialog"
              data-part="close-trigger"
              dir="ltr"
              id="dialog::r0::close"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >
              </div
              >

                <div
                  class="_modal-body_HASH_2 text-left"
                  data-ods="modal-body"
                >

                  <div
                    class="flex items-center mb-4"
                  >

                    <h4
                      class="_text--heading-4_HASH_31 block flex-1 mr-3"
                      data-ods="text"
                    >Example Heading
                    </h4
                    >
                    </div
                    >

                      <div
                        class="flex flex-col text-left"
                      >

                        <div
                        >

                          <p
                          >Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
                          </p
                          >

                            <label
                              for="test-input"
                            >Test Input
                            </label
                            >

                              <input
                                type="text"
                                id="test-input"
                                data-testid="test-input"
                              >
                            </div
                            >
                            </div
                            >

                              <div
                                class="flex flex-wrap gap-4 justify-end"
                              >
                              </div
                              >
                              </div
                              >
                              </div
                              >
                              </div
                              >
                              </body
                              >
`;

exports[`Modal Snapshot Tests > displays the modal with actions 1`] = `
<body
>

  <div
  >
  </div
  >

    <div
      data-scope="dialog"
      data-part="backdrop"
      dir="ltr"
      id="dialog::r1::backdrop"
      data-state="open"
      class="_modal-backdrop_HASH_22"
    >
    </div
    >

      <div
        data-scope="dialog"
        data-part="positioner"
        dir="ltr"
        id="dialog::r1::positioner"
        class="_modal-positioner_HASH_29"
      >

        <div
          data-scope="dialog"
          data-part="content"
          dir="ltr"
          role="dialog"
          id="dialog::r1::content"
          tabindex="-1"
          data-state="open"
          aria-modal="true"
          aria-labelledby=""
          aria-describedby=""
          class="_modal-content_HASH_35"
          data-ods="modal-content"
        >

          <div
            class="_modal-header--information_HASH_17 _modal-header_HASH_2"
          >

            <button
              class="_button--ghost_HASH_151 _button--neutral_HASH_83 _button--xs_HASH_25 _button_HASH_2 _modal-header__close_HASH_26"
              data-ods="button"
              aria-label="Close"
              data-scope="dialog"
              data-part="close-trigger"
              dir="ltr"
              id="dialog::r1::close"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >
              </div
              >

                <div
                  class="_modal-body_HASH_2 text-left"
                  data-ods="modal-body"
                >

                  <div
                    class="flex items-center mb-4"
                  >

                    <h4
                      class="_text--heading-4_HASH_31 block flex-1 mr-3"
                      data-ods="text"
                    >Example Heading
                    </h4
                    >
                    </div
                    >

                      <div
                        class="flex flex-col text-left"
                      >

                        <div
                        >

                          <p
                          >Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
                          </p
                          >

                            <label
                              for="test-input"
                            >Test Input
                            </label
                            >

                              <input
                                type="text"
                                id="test-input"
                                data-testid="test-input"
                              >
                            </div
                            >
                            </div
                            >

                              <div
                                class="flex flex-wrap gap-4 justify-end"
                              >

                                <button
                                  class="_button--ghost_HASH_151 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 mt-4"
                                  data-ods="button"
                                  data-testid="secondary-button"
                                  type="button"
                                >Cancel
                                </button
                                >

                                  <button
                                    class="_button--default_HASH_49 _button--md_HASH_42 _button--primary_HASH_100 _button_HASH_2 mt-4"
                                    data-ods="button"
                                    data-testid="primary-button"
                                    type="button"
                                  >Confirm
                                  </button
                                  >
                                  </div
                                  >
                                  </div
                                  >
                                  </div
                                  >
                                  </div
                                  >
                                  </body
                                  >
`;

exports[`Modal Snapshot Tests > displays the modal with critical type 1`] = `
<body
>

  <div
  >
  </div
  >

    <div
      data-scope="dialog"
      data-part="backdrop"
      dir="ltr"
      id="dialog::r5::backdrop"
      data-state="open"
      class="_modal-backdrop_HASH_22"
    >
    </div
    >

      <div
        data-scope="dialog"
        data-part="positioner"
        dir="ltr"
        id="dialog::r5::positioner"
        class="_modal-positioner_HASH_29"
      >

        <div
          data-scope="dialog"
          data-part="content"
          dir="ltr"
          role="alertdialog"
          id="dialog::r5::content"
          tabindex="-1"
          data-state="open"
          aria-modal="true"
          aria-labelledby=""
          aria-describedby=""
          class="_modal-content_HASH_35"
          data-ods="modal-content"
        >

          <div
            class="_modal-header--critical_HASH_14 _modal-header_HASH_2"
          >

            <button
              class="_button--ghost_HASH_151 _button--neutral_HASH_83 _button--xs_HASH_25 _button_HASH_2 _modal-header__close_HASH_26"
              data-ods="button"
              aria-label="Close"
              data-scope="dialog"
              data-part="close-trigger"
              dir="ltr"
              id="dialog::r5::close"
              type="button"
            >

              <span
                class="_icon--xmark_HASH_562 _icon_HASH_2"
                data-ods="icon"
                role="presentation"
              >
              </span
              >
              </button
              >
              </div
              >

                <div
                  class="_modal-body_HASH_2 text-left"
                  data-ods="modal-body"
                >

                  <div
                    class="flex items-center mb-4"
                  >

                    <h4
                      class="_text--heading-4_HASH_31 block flex-1 mr-3"
                      data-ods="text"
                    >Example Heading
                    </h4
                    >
                    </div
                    >

                      <div
                        class="flex flex-col text-left"
                      >

                        <div
                        >

                          <p
                          >Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
                          </p
                          >

                            <label
                              for="test-input"
                            >Test Input
                            </label
                            >

                              <input
                                type="text"
                                id="test-input"
                                data-testid="test-input"
                              >
                            </div
                            >
                            </div
                            >

                              <div
                                class="flex flex-wrap gap-4 justify-end"
                              >

                                <button
                                  class="_button--critical_HASH_49 _button--ghost_HASH_151 _button--md_HASH_42 _button_HASH_2 mt-4"
                                  data-ods="button"
                                  data-testid="secondary-button"
                                  type="button"
                                >Cancel
                                </button
                                >

                                  <button
                                    class="_button--critical_HASH_49 _button--default_HASH_49 _button--md_HASH_42 _button_HASH_2 mt-4"
                                    data-ods="button"
                                    data-testid="primary-button"
                                    type="button"
                                  >Confirm
                                  </button
                                  >
                                  </div
                                  >
                                  </div
                                  >
                                  </div
                                  >
                                  </div
                                  >
                                  </body
                                  >
`;
